# hieronymus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  hatch_build.py  install.sh  mise.toml  pyproject.toml  uninstall.sh
.agents/skills/: opentui-react  track-project-backlog  work-project-backlog
.github/workflows/: pr.yml  release.yml
.superpowers/sdd/: final-project-skills-fix-report.md  task-3-report.md
docs/: agent-workflows.md  continuation-spec.md  current-baseline.md  memory-dreaming.md  opentui-conventions.md  project-conventions.md  roadmap.md  service-toolkit.md  translation-workspace-integration.md  usage.md
docs/adr/: 0001-dream-conf-plaintext-secrets.md  0002-ink-react-tui-migration.md  0003-multilingual-concept-centered-memory-graph.md  0004-replace-ink-tui-with-opentui.md  0005-product-vision.md  0006-alpha-versioning-and-release-authority.md  0007-provider-catalog-and-workflow-assignments.md
docs/plans/: 2026-06-11-make-ink-default-and-eradicate-textual.md  2026-06-11-opentui-migration.md
docs/skills/: read-learn-remember.md
docs/superpowers/plans/: 2026-06-06-hieronymus-agent-toolkit-service.md  2026-06-06-hieronymus-memory-dreaming.md  2026-06-06-hieronymus-mvp.md  2026-06-07-hieronymus-agent-workflows.md  2026-06-07-hieronymus-config-tui-llm-dreaming.md  2026-06-07-hieronymus-management-tui.md  2026-06-07-hieronymus-production-release.md  2026-06-08-hieronymus-config-tui-dreaming-hardening.md  2026-06-08-hieronymus-ink-react-tui-migration.md  2026-06-09-hieronymus-multilingual-memory-design.md  2026-06-10-hieronymus-memory-gap-fill.md  2026-06-12-alpha-release-safety.md  2026-06-12-memory-dreaming-completion.md  2026-06-13-opentui-admin-command-palette-help.md  2026-06-13-opentui-config-schema.md  2026-06-13-opentui-packaged-startup-smoke.md  2026-06-13-opentui-responsive-layout.md  2026-06-13-opentui-test-warning-cleanup.md  2026-06-13-provider-backed-dreaming-audit-smoke.md  2026-06-13-release-frontend-bundle-build.md  2026-06-14-cli-service-completion-pass.md  2026-06-14-mcp-agent-integrations-completion.md  2026-06-14-opentui-completion-pass.md  2026-06-15-config-screen-grouped-form.md  2026-06-16-provider-catalog-workflow-assignments.md  2026-07-04-rag-pipelines.md  2026-07-15-official-provider-sdks.md  2026-07-15-rag-pipelines-completion.md  (+10 more)
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/src/: main.tsx
src/hieronymus/: __init__.py  __main__.py  admin.py  admin_models.py  agent_assets.py  agent_context.py  agent_hooks.py  agent_ingestion.py  cli.py  cli_boundaries.py  concept_models.py  concepts.py  config.py  crystals.py  daemon_events.py  daemon_mcp_client.py  db.py  doctor.py  dream_audit.py  dream_autostart.py  dream_config.py  dream_locks.py  dream_providers.py  dream_workflows.py  dreaming.py  ingest_config.py  install.py  llm_cache.py  mcp_operations.py  mcp_server.py  memory.py  memory_migration.py  memory_models.py  models.py  presentation.py  project_skills.py  provider_config.py  rag.py  rag_conversion.py  rag_models.py  (+22 more)
tests/: conftest.py  test_admin_actions.py  test_admin_cli.py  test_admin_memory_contracts.py  test_admin_store.py  test_admin_tui.py  test_agent_assets.py  test_agent_context.py  test_agent_hooks.py  test_agent_ingestion.py  test_agent_plugin_installers.py  test_agent_plugins.py  test_cli.py  test_cli_agent_install.py  test_cli_boundaries.py  test_cli_ink_tui.py  test_cli_opentui.py  test_cli_project_skills.py  test_cli_service.py  test_combined_recall.py  test_concept_facets_multilingual.py  test_concept_lifecycle.py  test_concept_models.py  test_concept_specific_rule_validation.py  test_concept_store.py  test_concepts.py  test_config.py  test_config_tui.py  test_crystals.py  test_daemon_events.py  test_daemon_mcp_client.py  test_db_compatibility.py  test_doctor.py  test_doctor_agent_plugins.py  test_doctor_ink_runtime.py  test_doctor_opentui_runtime.py  test_dream_audit.py  test_dream_autostart.py  test_dream_bounded_audit.py  test_dream_config.py  (+58 more)
(+117 files in other folders)
