[project]
name = "hieronymus"
version = "0.1.0"
description = "Local-first translation memory MCP for long-form book translation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pavel Obruchnikov", email = "me@inkyquill.net" }]
dependencies = [
  "click>=8.1.8",
  "mcp>=1.2.0",
]

[project.scripts]
hieronymus = "hieronymus.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
