[project]
name = "hieronymus"
version = "0.2.0"
description = "Local-first translation memory MCP for long-form book translation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pavel Obruchnikov", email = "me@inkyquill.net" }]
dependencies = [
  "click>=8.1.8",
  "mcp>=1.2.0",
  "tomli-w>=1.2.0",
]

[project.scripts]
hiero = "hieronymus.cli:main"
hieronymus = "hieronymus.cli:main"
hieronymus-agent-hook = "hieronymus.agent_hooks:main"
hieronymus-mcp = "hieronymus.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "python-semantic-release>=10.5.3",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/hieronymus", "frontend/dist/main.js"]
artifacts = ["frontend/dist/main.js"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"frontend/dist" = "hieronymus/frontend/dist"

[tool.hatch.build.targets.sdist]
artifacts = ["frontend/dist/main.js"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/hieronymus/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "bun install --cwd frontend --frozen-lockfile && bun run --cwd frontend build && uv build"
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
