[project]
name = "hieronymus"
version = "0.6.0"
description = "Local-first translation memory MCP for long-form book translation"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pavel Obruchnikov", email = "me@inkyquill.net" }]
dependencies = [
  "anthropic>=0.85.0",
  "click>=8.1.8",
  "google-genai>=1.0.0",
  "mammoth>=1.10.0",
  "markdownify>=1.2.0",
  "mcp>=1.2.0",
  "ollama>=0.6.0",
  "openai>=2.0.0",
  "pyyaml>=6.0.3",
  "pypdf>=6.0.0",
  "tomli-w>=1.2.0",
]

[project.scripts]
hiero = "hieronymus.cli:main"
hieronymus = "hieronymus.cli:main"
hieronymus-agent-hook = "hieronymus.agent_hooks:main"
hieronymus-mcp = "hieronymus.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "python-semantic-release>=10.5.3",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
only-include = ["src/hieronymus", "frontend/dist"]
artifacts = ["frontend/dist/**"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"frontend/dist" = "hieronymus/frontend/dist"

[tool.hatch.build.targets.sdist]
artifacts = ["frontend/dist/**"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/hieronymus/__init__.py:__version__"]
tag_format = "v{version}"
build_command = "uv build"
commit_message = "chore(release): v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
